<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddRecipeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/advent_pro_bold"
        android:paddingBottom="15dp"
        android:text="@string/add_new_recipe_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/titleLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/titleLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:paddingBottom="15dp"
        android:transitionName="logo"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/nameTitle"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/advent_pro_medium"
                android:padding="10dp"
                android:text="@string/recipe_name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:fontFamily="@font/advent_pro"
                android:hint="@string/recipe_name_edit_text"
                android:inputType="textPersonName"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/advent_pro_medium"
                android:padding="10dp"
                android:text="@string/recipe_time"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/recipeTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/advent_pro"
                android:hint="@string/recipe_time_edit_text"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ingredientsLayout"
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ingredientsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/advent_pro_medium"
                    android:padding="10dp"
                    android:text="@string/recipe_ingredients"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/advent_pro"
                    android:hint="@string/recipe_ingredients_edit_text"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </LinearLayout>

            <ListView
                android:id="@+id/ingredientList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/methodLayout"
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/methodTitle"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/advent_pro_medium"
                    android:padding="10dp"
                    android:text="@string/recipe_method"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/advent_pro"
                    android:hint="@string/recipe_method_edit_text"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </LinearLayout>

            <ListView
                android:id="@+id/methodList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </LinearLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button"
            android:fontFamily="@font/advent_pro_medium"
            android:text="@string/finish_add_recipe_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>